# vendiOS

./: .SRCINFO  .gitignore  LICENSE  README.md  build.sh
apps/vendimessage/: README.md
apps/vendimessage/qml/: Avatar.qml  Backend.qml  ChatView.qml  Composer.qml  ConversationRow.qml  InfoPanel.qml  LoginPage.qml  Main.qml  MessageBubble.qml  NewChatSheet.qml  Sidebar.qml  TypingIndicator.qml  mockdata.js
archiso/: packages.x86_64  pacman.conf  profiledef.sh
archiso/airootfs/etc/: hostname  motd  os-release
archiso/airootfs/etc/pam.d/: vendilock-fprint
archiso/airootfs/etc/systemd/journald.conf.d/: 10-vendios.conf
archiso/airootfs/etc/systemd/network/: 20-ethernet.network
archiso/airootfs/etc/systemd/system/: vendios-boot.service
archiso/airootfs/etc/systemd/system.conf.d/: 10-vendios.conf
archiso/airootfs/etc/vendios/: config  release
archiso/airootfs/etc/xdg/: mimeapps.list
archiso/airootfs/etc/xdg-desktop-portal/: vendiwm-portals.conf
archiso/airootfs/etc/xdg/quickshell/vendibar-pro/: AiContent.qml  Dash.qml  InfoCard.qml  Launcher.qml  MatchCard.qml  VendiMark.qml  WeatherCard.qml  shell.qml
archiso/airootfs/etc/xdg/quickshell/vendilock/: shell.qml
archiso/airootfs/etc/xdg/waybar/: config.jsonc  style.css
archiso/airootfs/etc/xdg/xdg-desktop-portal-wlr/: config
archiso/airootfs/opt/vendios/: offline-pacman.conf
archiso/airootfs/opt/vendios/repo/: abseil-cpp-20260107.1-1-x86_64.pkg.tar.zst.sig  adwaita-cursors-50.0-1-any.pkg.tar.zst.sig  adwaita-fonts-50.0-1-any.pkg.tar.zst.sig  adwaita-icon-theme-50.0-1-any.pkg.tar.zst.sig  alacritty-0.17.0-1-x86_64.pkg.tar.zst.sig  alsa-card-profiles-1:1.6.5-1-x86_64.pkg.tar.zst.sig  aom-3.14.1-1-x86_64.pkg.tar.zst.sig  appstream-1.1.2-1-x86_64.pkg.tar.zst.sig  aquamarine-0.11.0-2-x86_64.pkg.tar.zst.sig  archlinux-keyring-20260420-1-any.pkg.tar.zst.sig  at-spi2-core-2.60.4-1-x86_64.pkg.tar.zst.sig  atkmm-2.28.4-2-x86_64.pkg.tar.zst.sig  avahi-1:0.9rc4-1-x86_64.pkg.tar.zst.sig  base-3-3-any.pkg.tar.zst.sig  base-devel-1-2-any.pkg.tar.zst.sig  bash-5.3.9-1-x86_64.pkg.tar.zst.sig  bash-completion-2.17.0-3-any.pkg.tar.zst.sig  bat-0.26.1-2-x86_64.pkg.tar.zst.sig  bluez-5.86-6-x86_64.pkg.tar.zst.sig  bluez-libs-5.86-6-x86_64.pkg.tar.zst.sig  bluez-utils-5.86-6-x86_64.pkg.tar.zst.sig  brightnessctl-0.5.1-3-x86_64.pkg.tar.zst.sig  brotli-1.2.0-1-x86_64.pkg.tar.zst.sig  btrfs-progs-7.0-1-x86_64.pkg.tar.zst.sig  bubblewrap-0.11.2-1-x86_64.pkg.tar.zst.sig  ca-certificates-20240618-1-any.pkg.tar.zst.sig  ca-certificates-utils-20240618-1-any.pkg.tar.zst.sig  cairomm-1.14.5-3-x86_64.pkg.tar.zst.sig  chrony-4.8-3-x86_64.pkg.tar.zst.sig  cpptrace-1.0.4-2-x86_64.pkg.tar.zst.sig  cryptsetup-2.8.6-1-x86_64.pkg.tar.zst.sig  db5.3-5.3.28-7-x86_64.pkg.tar.zst.sig  dbus-1.16.2-1-x86_64.pkg.tar.zst.sig  dbus-broker-37-3-x86_64.pkg.tar.zst.sig  dbus-broker-units-37-3-x86_64.pkg.tar.zst.sig  dbus-units-37-3-x86_64.pkg.tar.zst.sig  device-mapper-2.03.41-1-x86_64.pkg.tar.zst.sig  diffutils-3.12-2-x86_64.pkg.tar.zst.sig  djvulibre-3.5.30-1-x86_64.pkg.tar.zst.sig  dkms-3.4.1-1-any.pkg.tar.zst.sig  (+510 more)
archiso/airootfs/root/: .bash_profile  .bashrc  customize_airootfs.sh
archiso/airootfs/root/.config/alacritty/: alacritty.toml
archiso/airootfs/root/.config/fastfetch/: config.jsonc
archiso/airootfs/root/.config/foot/: foot.ini
archiso/airootfs/root/.config/hypr/: hyprland.conf
archiso/airootfs/root/.config/kitty/: kitty.conf  theme.conf
archiso/airootfs/usr/lib/vendi/: disk.sh  system.sh  ui.sh
archiso/airootfs/usr/share/plymouth/themes/vendios/: vendios.plymouth  vendios.script
archiso/airootfs/usr/share/vendimessage/qml/: Backend.qml  Composer.qml  InfoPanel.qml  Main.qml  MessageBubble.qml  RoundedImage.qml  Sidebar.qml
archiso/airootfs/usr/share/vendios/: logo.txt  shard.txt
archiso/efiboot/loader/: loader.conf
archiso/efiboot/loader/entries/: 01-vendios-x86_64-linux.conf
archiso/grub/: grub.cfg
archiso/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_pxe.cfg  archiso_sys-linux.cfg  archiso_tail.cfg
docs/: ROADMAP.md  vendi-ai.md  vendi-messenger.md
packaging/: vendi-chatd.service  vendimessage  vendimessage.desktop
packaging/aur/: .SRCINFO  PKGBUILD  vendimessage.install
pkg/: publish-aur.sh
pkg/vendi/: PKGBUILD
pkg/vendi-git/: .SRCINFO  PKGBUILD
pkg/vendimessage-git/: PKGBUILD
src/: Cargo.toml
src/vendi-ai/: Cargo.toml
src/vendi-ai/src/: main.rs
src/vendi-chatd/: Cargo.toml
src/vendi-chatd/src/: backend.rs  main.rs  matrix.rs  protocol.rs  ws.rs
src/vendi-ctl/: Cargo.toml
src/vendi-ctl/src/: main.rs
src/vendi-demo/: Cargo.toml
src/vendi-demo/src/: main.rs
src/vendi-menu/: Cargo.toml
src/vendi-menu/src/: actions.rs  apps.rs  ipc.rs  keys.rs  main.rs  settings.rs  style.css
src/vendibar/: Cargo.toml
src/vendibar-pro/: BatteryBadge.qml  Dash.qml  Launcher.qml  Overview.qml  shell.qml
src/vendibar/src/: ipc.rs  main.rs  modules.rs  style.css
src/vendiwm/: Cargo.toml
src/vendiwm/src/: config.rs  cursor.rs  input.rs  ipc.rs  layout.rs  lib.rs  main.rs  render.rs  screencopy.rs  state.rs  workspaces.rs  xwayland.rs
src/vendiwm/src/backends/: mod.rs  udev.rs  winit.rs
