[package]
name = "vendi-chatd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vendi-chatd"
path = "src/main.rs"

[features]
# Default = mock backend: compiles fast, runs without a homeserver, lets the UI
# and IPC be developed/tested. `--features matrix` pulls matrix-sdk for the real
# backend (heavier build; needs a homeserver to actually log in).
default = []
matrix = ["dep:matrix-sdk", "dep:mime"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"

# real backend, opt-in
matrix-sdk = { version = "0.7", default-features = true, optional = true }
mime = { version = "0.3", optional = true }
