[package]
name        = "vendi-ctl"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
description = "vendi-ctl — CLI for controlling vendiwm over its JSON IPC socket"

[[bin]]
name = "vendi-ctl"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
