[package]
name        = "vendi-menu"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
description = "vendi-menu — launcher / runner / power menu for vendiOS"

[[bin]]
name = "vendi-menu"
path = "src/main.rs"

[dependencies]
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
gtk4 = { version = "0.11", features = ["v4_12"] }
gtk4-layer-shell = "0.8.0"
