[package]
name        = "vendiwm"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
description = "vendiWM — definitive Wayland compositor for vendiOS"

[[bin]]
name = "vendiwm"
path = "src/main.rs"

[features]
default     = ["winit", "udev", "xwayland"]
# Backends
winit       = ["smithay/backend_winit"]    # nested in another compositor, for dev
udev        = [
    "smithay/backend_udev",
    "smithay/backend_libinput",
    "smithay/backend_drm",
    "smithay/backend_gbm",
    "smithay/backend_session_libseat",
]
# XWayland: run X11 apps (Discord/Electron on NVIDIA, etc.) via the Xserver.
# Pulls in smithay's X11 window-manager + xwayland-shell glue.
xwayland    = ["smithay/xwayland"]

[dependencies]
smithay = { workspace = true, default-features = false, features = [
    "wayland_frontend",
    "desktop",
    "renderer_gl",
    "renderer_pixman",
    "use_system_lib",   # exposes wl_drm via bind_wl_display (Mesa EGL clients)
] }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
kdl                 = { workspace = true }
knus                = { workspace = true }
notify              = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
calloop             = { workspace = true }
xcursor             = "0.3"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "webp"] }
pam = "0.7"
users = "0.8"
